--- a/Dockerfile.full
+++ b/Dockerfile.full
@@ -1,4 +1,4 @@
-FROM blang/latex:ctanbasic
-MAINTAINER Benedikt Lang <mail@blang.io>
+FROM alexisduque/latex:ctanbasic
+MAINTAINER Alexis Duque <alexisd61@gmail.com>
 
 RUN tlmgr install scheme-full
