--- a/Dockerfile.ubuntu
+++ b/Dockerfile.ubuntu
@@ -1,12 +1,17 @@
-FROM ubuntu:disco
+FROM ubuntu:latest
 MAINTAINER Alexis Duque <alexisd61@gmail.com>
 ENV DEBIAN_FRONTEND noninteractive
 
 RUN apt-get update -q && apt-get install -qy \
-    texlive-full \
+    texlive-full latexmk python3 \
     python-pygments gnuplot \
     make git \
     && rm -rf /var/lib/apt/lists/*
+
+RUN locale-gen en_US.UTF-8
+ENV LANG en_US.UTF-8
+ENV LANGUAGE en_US:en
+ENV LC_ALL en_US.UTF-8
 
 WORKDIR /data
 VOLUME ["/data"]
